# platform.core.uifw.libgbm

./: Makefile  Makefile.am  README  configure.ac  gbm.pc.in
backends/tbm/: gbm_tbm.c  gbm_tbm.h  gbm_tbmint.h
packaging/: libgbm.spec
pkgconfig/: gbm.pc  libgbm.pc
src/: backend.c  backend.h  gbm.c  gbm.h  gbmint.h
src/backends/: Makefile
